--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   /* grid-template-columns: 1fr 1fr 1fr; */
+  grid-row-gap: 30px;
 }
 
 /* Base Font & utilization section */
@@ -15,18 +16,29 @@ body {
 /* main-section */
 main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
 }
 /* Container-section */
 .container {
   background-color: #ffffff;
   width: 870px;
+  margin-top: 21px;
+  padding: 30px;
+  border-radius: 5px;
+
   padding: 30px;
 }
 /* top-detalis */
 .top-datiles {
   color: #56479b;
   font-size: 24px;
+  margin-top: 10px;
+  font-size: 18px;
+}
+.top-players {
+  margin-bottom: 30px;
 }
 
 /* players-Style */
@@ -44,4 +56,67 @@ main {
 /* player-style */
 .player-name {
   margin-left: 16px;
+}
+hr {
+  border: 1px solid #d1d1d1;
+  margin-bottom: 27px;
+}
+
+/*=============
+ Top blog Style
+ ============= */
+.blogs {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 26px;
+}
+.blog {
+  display: flex;
+}
+.blog .thamline img {
+  width: 177px;
+  height: 117px;
+}
+.blog-info {
+  margin-left: 16px;
+}
+.blog-title {
+  font-size: 20px;
+}
+.blog-author {
+  color: #9f9f9f;
+  font-size: 16px;
+}
+.blog-author a {
+  text-decoration: none;
+  font-size: 16px;
+  color: #562eff;
+  margin-left: 5px;
+}
+
+/*============ 
+Courses Style 
+========= */
+.courses {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 26px;
+}
+.course .course-banner img {
+  width: 224px;
+  height: 104px;
+}
+.course-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.fa-star {
+  font-size: 12px;
+}
+.fa-star.flied {
+  color: #ffc014;
+}
+.fa-star.empty {
+  color: #aeaeae;
 }
